--- a/example.env
+++ b/example.env
@@ -1,23 +1,14 @@
-# name of the cfn stack
-STACK_NAME=transcript-indexer
+# only necessary if your ~/.aws/credentials file has multiple profiles
+AWS_DEFAULT_PROFILE=
 
 # name of the bucket the packaged lambda code will be placed in for deployment
 LAMBDA_CODE_BUCKET=
 
-# full url to your elasticsearch instance
-ES_HOST=https://user:pass@my-es-host:9200/optional-path
-
-# name of the target ES index for transcript documents
-ES_TRANSCRIPT_INDEX=transcripts
-
-# only necessary if your ~/.aws/credentials file has multiple profiles
-AWS_PROFILE=
-
-# arn of the bucket where raw transcript json is stored
-TRANSCRIPT_BUCKET=
+# elasticsearch domain instance type
+ES_INSTANCE_TYPE=t2.small.elasticsearch
 
 # email to send alerts to
 NOTIFICATION_EMAIL=
 
-# id of opsworks vpc the lambda function must run within
-VPC_ID=
+# unique name of the cloudformation stack
+STACK_NAME=
