--- a/template.yml
+++ b/template.yml
@@ -205,3 +205,7 @@ Outputs:
     Value: !Ref PrivateSubnet
   SecurityGroupId:
     Value: !GetAtt SecurityGroup.GroupId
+  VpcId:
+    Value: !Ref VPC
+  LambdaIndexerFunction:
+    Value: !Ref TranscriptIndexerFunction
