--- a/requirements.txt
+++ b/requirements.txt
@@ -4,33 +4,26 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
-attrs==19.1.0             # via jsonschema
 aws-lambda-logging==0.1.1
-aws-sam-translator==1.12.0  # via cfn-lint
 awscli==1.16.198
 boto3==1.9.188
 botocore==1.12.188        # via awscli, boto3, s3transfer
-certifi==2019.6.16        # via requests
-cfn-lint==0.22.2
-chardet==3.0.4            # via requests
+click==7.0                # via ssm-dotenv
 colorama==0.3.9           # via awscli
 docutils==0.14            # via awscli, botocore
 elasticsearch-dsl==6.4.0
 elasticsearch==6.4.0
-idna==2.8                 # via requests
+future==0.17.1            # via ssm-cache
 invoke==1.2.0
 jmespath==0.9.4           # via boto3, botocore
-jsonpatch==1.23           # via cfn-lint
-jsonpointer==2.0          # via jsonpatch
-jsonschema==3.0.1         # via aws-sam-translator, cfn-lint
-parameter-store-environ==0.1.2
 pyasn1==0.4.5             # via rsa
-pyrsistent==0.15.3        # via jsonschema
 python-dateutil==2.8.0
 python-dotenv==0.10.3
-pyyaml==5.1               # via awscli, cfn-lint
-requests==2.22.0          # via cfn-lint
+pyyaml==5.1               # via awscli
 rsa==3.4.2                # via awscli
 s3transfer==0.2.1         # via awscli, boto3
 six==1.12.0
+ssm-cache==2.9            # via ssm-dotenv
+ssm-dotenv==0.1.0
+toml==0.10.0              # via ssm-dotenv
 urllib3==1.25.3
