--- a/requirements.txt
+++ b/requirements.txt
@@ -5,21 +5,25 @@
 #    pip-compile --output-file requirements.txt requirements.in
 #
 aws-lambda-logging==0.1.1
-awscli==1.16.198
-boto3==1.9.188
-botocore==1.12.188        # via awscli, boto3, s3transfer
+awscli==1.16.240
+boto3==1.9.230
+botocore==1.12.230        # via awscli, boto3, s3transfer
+certifi==2019.9.11
+chardet==3.0.4
 click==7.0                # via ssm-dotenv
 colorama==0.3.9           # via awscli
-docutils==0.14            # via awscli, botocore
+docutils==0.15.2          # via awscli, botocore
 elasticsearch-dsl==6.4.0
 elasticsearch==6.4.0
 future==0.17.1            # via ssm-cache
-invoke==1.2.0
+idna==2.8
+invoke==1.3.0
 jmespath==0.9.4           # via boto3, botocore
-pyasn1==0.4.5             # via rsa
+pyasn1==0.4.7             # via rsa
 python-dateutil==2.8.0
 python-dotenv==0.10.3
-pyyaml==5.1               # via awscli
+pyyaml==5.1.2             # via awscli
+requests==2.22.0
 rsa==3.4.2                # via awscli
 s3transfer==0.2.1         # via awscli, boto3
 six==1.12.0
