config settings for function timeout and memory

--- a/example.env
+++ b/example.env
@@ -12,3 +12,9 @@ NOTIFICATION_EMAIL=
 
 # unique name of the cloudformation stack
 STACK_NAME=
+
+# seconds to allow the function to run
+LAMBDA_TIMEOUT=
+
+# how much memory in MB to give the function
+LAMBDA_MEMORY=
